# sistema-cef

./: .gitignore  README.md  guia-repositorio.md  manual-de-estilo.md
backend/: API_DOCUMENTATION.md  Cargo.toml  Dockerfile  database.db  database.db-shm  database.db-wal  env-template  nixpacks.toml
backend/.sqlx/: query-016421f16b6551d750f95b1456ccf3d8623478f87bf39843f200386226d662ad.json  query-06925e4626d79d67241eb2a2d8840f2d7c64af1659ad98eff6ffc926f7f8bc54.json  query-077f6e348eb1253fbc7102282d3f10e1ff8a37c02b3fadeb02a03bcb19cb52ce.json  query-09b247e906323649e1c2b82a4596942b1e932d550679cbb2c3a796854ef00a97.json  query-0c5194ba75bd23fe74ac772022650b4a6edd9b57e46e4bc60330a1fa10cf1759.json  query-11949ff1e1b5644175ae13a4cffae0bde7a357e81e6a33d89dfc057908ac27af.json  query-1372660acb1873bcc37425a2ae12a9e2513e27df09e51b590922c5cc468877f4.json  query-17fedbce75e3b0927f7af753de839902d3eb5f5c3b76d86aaaf5fd5a00bc68b9.json  query-187bdb45f0ec43e3efa4115a2271617919f130ca8fd25657fea5c5bbcf6c063c.json  query-18e063988a9f6ffca923c69eb9cec600c1652db5492233ff762cf63e86408a47.json  query-1e49e3fdf773e903d96c3ecefd01ee2b4f751a5dd3650355d49bba9f46a67a8e.json  query-2155b61670384da4ce6b1e6644bd69875db181ad561791126d56f269c33e403a.json  query-215e07ad4e1658fff8a6ccc5fbfcd46c2db32174380aa03bd6223330faa928ca.json  query-22a0465ff431dc87d277c25c1b30c831328e5fcd714d3eaacbbaf997b31f27dc.json  query-28cc18a52136361292086ceca18ae87563a561142bdb73603906be847ae6c6e1.json  query-29ea3a4992eeb66fb57d1f2f80a93f6abfb794130c3acfdedce56dc0370f7a70.json  query-2bcb70f9459d175e27e732014f735d9310fa60ceb8a21e6dc8d5f5c54bfe3c5f.json  query-2e6fc3e010342449ffa76fceae3abf110541f51007489ce1b083c544d825275d.json  query-31e10ac0715623b6a7a97c5c10682211f1733ad6374abc648bb38403b14bc368.json  (+79 more)
backend/migrations/: 20260520164636_crear_tabla_pago.sql  (+29 more)
(+391 files in other folders)
