[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = {version="0.4.44", features=["serde"]}
jsonwebtoken = "10.4.0"
serde = { version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
sqlx = {version="0.8.6", features= ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"]}
tokio = {version="1.52.2", features=["full"]}
