[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
chrono = {version="0.4.44", features=["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
password-hash = "0.6.1"
rand_core = {version="0.10.1", features=["std"]}
serde = { version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
sqlx = {version="0.8.6", features= ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"]}
thiserror = "2.0.18"
tokio = {version="1.52.2", features=["full"]}
