[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[build]
rustflags = ["-A", "warnings"]

[dependencies]
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
axum = {version = "0.8.9", features = ["macros"]}
chrono = {version="0.4.44", features=["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
serde = { version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
sqlx = {version="0.8.6", features= ["sqlite", "runtime-tokio", "macros", "migrate", "chrono"]}
thiserror = "2.0.18"
tokio = {version="1.52.2", features=["full"]}
uuid = {version="1.23.1", features=["v4"]}
lettre = { version = "0.11.22", features = ["tokio1", "tokio1-native-tls"] }
reqwest = {version = "0.13.4", features = ["json"]}
tower-http = { version = "0.6.11", features = ["cors"] }
